--- a/Contactenos.html
+++ b/Contactenos.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contactenos</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="img/Iconos/icono.png">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <!--<link rel="stylesheet" href="css_propio/contactenos.css">-->
         <link rel="stylesheet" href="css_propio/nav.css">
