--- a/Login.html
+++ b/Login.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--<link rel="stylesheet" href="css_propio/bg.css">-->
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="shortcut icon" href="img/Iconos/icono.png">
         <link rel="stylesheet" href="css_propio/nav.css">
     </head>
     <body>
