--- a/Nosotros.html
+++ b/Nosotros.html
@@ -9,6 +9,7 @@
         <link rel="shortcut icon" href="img/Iconos/icono.svg">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css_propio/nav.css">
+        <link rel="shortcut icon" href="img/Iconos/icono.png">
     </head>
     <body>
         <nav id="nav" class="navbar navbar-expand-lg navbar-light">
