--- a/Servicios.html
+++ b/Servicios.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css_propio/nav.css">
     <link rel="shortcut icon" href="img/Iconos/icono.png">
+    <link rel="stylesheet" href="/Booststrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/global.css">
 </head>
 <body>
     <nav id="nav" class="navbar navbar-expand-lg navbar-light">
@@ -40,9 +40,7 @@
       <footer class="pt-0 py-1 my-0 text-center bg-black">
         <ul class="container-fluid navbar-nav list-group-horizontal w-100 navbar navbar-expand-lg">
           <li id="boton_entrar" class="nav-ite m-2 w-25">
-            <a class="ms-5 text-secondary border border-1 border-secondary nav-link w-25 position-absolute top-50 start-0 translate-middle-y" href="/Login.html">
-              <i class="fa-solid fa-right-to-bracket"></i>Entrar
-            </a>
+            <a class="ms-5 text-secondary border border-1 border-secondary nav-link w-25 position-absolute top-50 start-0 translate-middle-y" href="/Login.html">Entrar</a>
           </li>
           <li class="nav-item m-2 w-50">
             <p class="text-center text-muted position-absolute top-50 start-50 translate-middle ">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
@@ -52,6 +50,6 @@
           </li>
         </ul>
       </footer>
-    <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="./Booststrap/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
