--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1,73 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nosotros</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="img/Iconos/icono.svg">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css_propio/nav.css">
-        <link rel="shortcut icon" href="img/Iconos/icono.png">
-    </head>
-    <body>
-        <nav id="nav" class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="img/Iconos/Logo_letras.svg" class="img-fluid" height="auto" width="100" alt="Logo_letras"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Noticias<img class="img-fluid" height="auto" width="30" src="./img/Iconos/ico-noticias.svg" alt=""></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Servicios.html">Servicios<img class="img-fluid" height="auto" width="30" src="./img/Iconos/ico-servicios.svg" alt=""></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Contactenos.html">Contactenos<img class="img-fluid" height="auto" width="30" src="./img/Iconos/ico-contactos.svg" alt=""></a>
-                  </li>
-                  <li class="nav-item border border-1 border-dark rounded p-1">
-                    <a class="nav-link active" href="Nosotros.html">Nosotros<img class="img-fluid" height="auto" width="30" src="./img/Iconos/ico-nosotros.svg" alt=""></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
-        <div id="contenido" class="bg-image pb-0 justify-content-around" style="background-image: url('img/Bg/fondo_nosotros.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
-          <div>
-            <div class="p-xxl-5 p-xl-5 p-lg-4 p-md-5 ">
-              <h1 class="text-black">Misión</h1>
-              <p class="text-black">Satisfacer las expectativas del cliente en el diagnostico y reparación de motores diesel, por medio de procesos óptimos y un equipo humano y tecnológico idóneo.</p>
-            </div>
-            <div class="p-xxl-5 p-xl-5 p-lg-4 p-md-5">
-              <h1 class="text-black">Visión</h1>
-              <p class="text-black">Usar nuestra experiencia, infraestructura, honestidad y sentido de servicio para que mediante el uso de nuestras herramientas y procesos nos permitan posicionarnos como uno de los cinco mejores centros de servicios técnicos diésel en Colombia.
-              </p>
-            </div>
-            <div class="p-xxl-5 p-xl-5 p-lg-4 p-md-5">
-              <h1 class="text-black">Valores</h1>
-              <p class="text-black">Servicio oportuno con calidad y confianza.</p>
-            </div>
-          </div>
-        </div>
-        <footer class="pt-0 py-1 my-0 text-center bg-black">
-          <ul class="container-fluid navbar-nav list-group-horizontal w-100 navbar navbar-expand-lg">
-            <li id="boton_entrar" class="nav-ite m-2 w-25">
-              <a class="ms-5 text-secondary border border-1 border-secondary nav-link w-25 position-absolute top-50 start-0 translate-middle-y" href="/Login.html">
-                <i class="fa-solid fa-right-to-bracket"></i>Entrar
-              </a>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nosotros</title>
+    <link rel="shortcut icon" href="img/Iconos/icono.png">
+    <link rel="stylesheet" href="/Booststrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/global.css">
+  </head>
+  <body>
+    <nav id="nav" class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img src="img/Iconos/Logo_letras.svg" class="img-fluid" height="auto" width="100" alt="Logo_letras"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Noticias<img class="img-fluid" height="auto" width="30" src="./img/Iconos/ico-noticias.svg" alt=""></a>
             </li>
-            <li class="nav-item m-2 w-50">
-              <p class="text-center text-muted position-absolute top-50 start-50 translate-middle ">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
+            <li class="nav-item">
+              <a class="nav-link" href="Servicios.html">Servicios<img class="img-fluid" height="auto" width="30" src="./img/Iconos/ico-servicios.svg" alt=""></a>
             </li>
-            <li class="nav-item  w-25">
-              <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid" height="auto" width="50" alt="Footer-Llaman"></a>
+            <li class="nav-item">
+              <a class="nav-link" href="Contactenos.html">Contactenos<img class="img-fluid" height="auto" width="30" src="./img/Iconos/ico-contactos.svg" alt=""></a>
+            </li>
+            <li class="nav-item border border-1 border-dark rounded p-1">
+              <a class="nav-link active" href="Nosotros.html">Nosotros<img class="img-fluid" height="auto" width="30" src="./img/Iconos/ico-nosotros.svg" alt=""></a>
             </li>
           </ul>
-        </footer>
-        <script src="js/bootstrap.bundle.min.js"></script>
-    </body>
+        </div>
+      </div>
+    </nav>
+    <div id="contenido" class="bg-image pb-0 justify-content-around" style="background-image: url('img/Bg/fondo_nosotros.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
+      <div>
+        <div class="p-xxl-5 p-xl-5 p-lg-4 p-md-5 ">
+          <h1 class="text-black">Misión</h1>
+          <p class="text-black">Satisfacer las expectativas del cliente en el diagnostico y reparación de motores diesel, por medio de procesos óptimos y un equipo humano y tecnológico idóneo.</p>
+        </div>
+        <div class="p-xxl-5 p-xl-5 p-lg-4 p-md-5">
+          <h1 class="text-black">Visión</h1>
+          <p class="text-black">Usar nuestra experiencia, infraestructura, honestidad y sentido de servicio para que mediante el uso de nuestras herramientas y procesos nos permitan posicionarnos como uno de los cinco mejores centros de servicios técnicos diésel en Colombia.
+          </p>
+        </div>
+        <div class="p-xxl-5 p-xl-5 p-lg-4 p-md-5">
+          <h1 class="text-black">Valores</h1>
+          <p class="text-black">Servicio oportuno con calidad y confianza.</p>
+        </div>
+      </div>
+    </div>
+    <footer class="pt-0 py-1 my-0 text-center bg-black">
+      <ul class="container-fluid navbar-nav list-group-horizontal w-100 navbar navbar-expand-lg">
+        <li id="boton_entrar" class="nav-ite m-2 w-25">
+          <a class="ms-5 text-secondary border border-1 border-secondary nav-link w-25 position-absolute top-50 start-0 translate-middle-y" href="/Login.html">Entrar</a>
+        </li>
+        <li class="nav-item m-2 w-50">
+          <p class="text-center text-muted position-absolute top-50 start-50 translate-middle ">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
+        </li>
+        <li class="nav-item  w-25">
+          <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid" height="auto" width="50" alt="Footer-Llaman"></a>
+        </li>
+      </ul>
+    </footer>
+    <script src="./Booststrap/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
