--- a/Servicios.html
+++ b/Servicios.html
@@ -34,21 +34,43 @@
             </ul>
           </div>
         </div>
-      </nav>
-      <div id="contenido" class="bg-image pb-0 justify-content-around" style="background-image: url('img/Bg/fondo_servicios.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
+    </nav>
+    <div id="contenido" class="bg-image justify-content-around" style="background-image: url('img/Bg/fondo_servicios.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
+      <div class="row w-100 p-lg-3 p-2" id="container">
+        <div class="col-12 col-lg-7 bg-opacity-25 bg-secondary  mt-lg-5" id="list-sings">
+          <div class="row">
+            <div class="col-6">
+              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Diagnostico, mantenimiento, reparación y calibración.</a></div>
+              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Sistemas de inyección diésel, motores, turbo alimentadores diésel.</a></div>
+              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Suministro de repuestos.</a></div>
+              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Scanner para diagnosticos de todas las marcas.</a></div>
+              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Mantenimiento preventivo.</a></div>
+            </div>
+            <div class="col-6">
+              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Cambios de aceite, cambio sistemas de filtración, mantenimiento líneas de combustible.</a></div>
+              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Mantenimiento y revisión eléctrica.</a></div>
+              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Mantenimiento radiador e intercoler.</a></div>
+              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start"> Bombas de agua, recargas fanclutch.</a></div>
+            </div>
+          </div>
+        </div>
+        <div class="ms-lg-3 col-lg-4 col-12 mt-5 mt-lg-5"id="sing-information">
+          <div class="row"><p class="text-break">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, quibusdam! Rerum optio eum sit voluptatem aperiam, laudantium commodi. Reprehenderit error beatae vel quasi commodi maxime, repudiandae deserunt id? Minima, magnam!</p></div>
+        </div>
       </div>
-      <footer class="pt-0 py-1 my-0 text-center bg-black">
-        <ul class="container-fluid navbar-nav list-group-horizontal w-100 navbar navbar-expand-lg">
-          <li id="boton_entrar" class="nav-ite m-2 w-25">
-            <a class="ms-5 text-secondary border border-1 border-secondary nav-link w-25 position-absolute top-50 start-0 translate-middle-y" href="/Login.html">Entrar</a>
-          </li>
-          <li class="nav-item m-2 w-50">
-            <p class="text-center text-muted position-absolute top-50 start-50 translate-middle ">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
-          </li>
-          <li class="nav-item  w-25">
-            <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid" height="auto" width="50" alt="Footer-Llaman"></a>
-          </li>
-        </ul>
+    </div>
+    <footer class="bg-black">
+      <div class="row w-100 ">
+        <div class="col-4 text-center" id="boton_entrar">
+          <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="/Login.html">Entrar</a>
+        </div>
+        <div class="col-4">
+          <p class="mt-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
+        </div>
+        <div class="col-4 text-center">
+          <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-2 " height="auto" width="50" alt="Footer-Llaman"></a>
+        </div>
+      </div>
       </footer>
     <script src="./Booststrap/js/bootstrap.bundle.min.js"></script>
   </body>
