--- a/Nosotros.html
+++ b/Nosotros.html
@@ -34,35 +34,35 @@
         </div>
       </div>
     </nav>
-    <div id="contenido" class="bg-image pb-0 justify-content-around" style="background-image: url('img/Bg/fondo_nosotros.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
-      <div>
-        <div class="p-xxl-5 p-xl-5 p-lg-4 p-md-5 ">
+    <div id="contenido-nosotros" class="bg-image pb-0 justify-content-around" style="background-image: url('img/Bg/fondo_nosotros.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
+      <div class="py-lg-3 px-lg-5 py-5 w-100" id="textos">
+        <div class="row mb-lg-3 mb-5 bg-secondary bg-opacity-25 w-100">
           <h1 class="text-black">Misión</h1>
           <p class="text-black">Satisfacer las expectativas del cliente en el diagnostico y reparación de motores diesel, por medio de procesos óptimos y un equipo humano y tecnológico idóneo.</p>
         </div>
-        <div class="p-xxl-5 p-xl-5 p-lg-4 p-md-5">
+        <div class="row mb-lg-3 mb-5 bg-secondary bg-opacity-25 w-100">
           <h1 class="text-black">Visión</h1>
           <p class="text-black">Usar nuestra experiencia, infraestructura, honestidad y sentido de servicio para que mediante el uso de nuestras herramientas y procesos nos permitan posicionarnos como uno de los cinco mejores centros de servicios técnicos diésel en Colombia.
           </p>
         </div>
-        <div class="p-xxl-5 p-xl-5 p-lg-4 p-md-5">
+        <div class="row mb-lg-3 mb-5 bg-secondary bg-opacity-25 w-100">
           <h1 class="text-black">Valores</h1>
           <p class="text-black">Servicio oportuno con calidad y confianza.</p>
         </div>
       </div>
     </div>
-    <footer class="pt-0 py-1 my-0 text-center bg-black">
-      <ul class="container-fluid navbar-nav list-group-horizontal w-100 navbar navbar-expand-lg">
-        <li id="boton_entrar" class="nav-ite m-2 w-25">
-          <a class="ms-5 text-secondary border border-1 border-secondary nav-link w-25 position-absolute top-50 start-0 translate-middle-y" href="/Login.html">Entrar</a>
-        </li>
-        <li class="nav-item m-2 w-50">
-          <p class="text-center text-muted position-absolute top-50 start-50 translate-middle ">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
-        </li>
-        <li class="nav-item  w-25">
-          <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid" height="auto" width="50" alt="Footer-Llaman"></a>
-        </li>
-      </ul>
+    <footer class="bg-black">
+      <div class="row w-100 h-auto ">
+        <div class="col-lg-4 text-center" id="boton_entrar">
+          <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="/Login.html">Entrar</a>
+        </div>
+        <div class="col-lg-4">
+          <p class="mt-lg-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
+        </div>
+        <div class="col-lg-4 text-center">
+          <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
+        </div>
+      </div>
     </footer>
     <script src="./Booststrap/js/bootstrap.bundle.min.js"></script>
   </body>
