--- a/Servicios.html
+++ b/Servicios.html
@@ -35,7 +35,7 @@
           </div>
         </div>
     </nav>
-    <div id="contenido" class="bg-image justify-content-around" style="background-image: url('img/Bg/fondo_servicios.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
+    <div id="contenido-servicios" class="bg-image justify-content-around" style="background-image: url('img/Bg/fondo_servicios.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
       <div class="row w-100 p-lg-3 p-2" id="container">
         <div class="col-12 col-lg-7 bg-opacity-25 bg-secondary  mt-lg-5" id="list-sings">
           <div class="row">
@@ -54,24 +54,24 @@
             </div>
           </div>
         </div>
-        <div class="ms-lg-3 col-lg-4 col-12 mt-5 mt-lg-5"id="sing-information">
+        <div class="ms-lg-3 col-lg-4 col-12 mt-3 mt-lg-5"id="sing-information">
           <div class="row"><p class="text-break">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, quibusdam! Rerum optio eum sit voluptatem aperiam, laudantium commodi. Reprehenderit error beatae vel quasi commodi maxime, repudiandae deserunt id? Minima, magnam!</p></div>
         </div>
       </div>
     </div>
     <footer class="bg-black">
       <div class="row w-100 ">
-        <div class="col-4 text-center" id="boton_entrar">
+        <div class="col-lg-4 text-center" id="boton_entrar">
           <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="/Login.html">Entrar</a>
         </div>
-        <div class="col-4">
-          <p class="mt-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
+        <div class="col-lg-4">
+          <p class="mt-lg-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
         </div>
-        <div class="col-4 text-center">
-          <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-2 " height="auto" width="50" alt="Footer-Llaman"></a>
+        <div class="col-lg-4 text-center">
+          <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
         </div>
       </div>
-      </footer>
+    </footer>
     <script src="./Booststrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
