--- a/Login.html
+++ b/Login.html
@@ -53,15 +53,18 @@
           </form>
         </div>
       </div>
-      <footer class="pt-0 py-1 my-0 text-center bg-black">
-        <ul class="container-fluid navbar-nav list-group-horizontal w-100 navbar navbar-expand-lg">
-          <li class="nav-item m-2 w-50">
-            <p class="text-center text-muted position-absolute top-50 start-50 translate-middle ">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
-          </li>
-          <li class="nav-item w-50">
-            <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid" height="auto" width="50" alt="Footer-Llaman"></a>
-          </li>
-        </ul>
+      <footer class="bg-black">
+        <div class="row w-100 ">
+          <div class="col-lg-4 text-center" id="boton_entrar">
+            <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="/Login.html">Entrar</a>
+          </div>
+          <div class="col-lg-4">
+            <p class="mt-lg-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
+          </div>
+          <div class="col-lg-4 text-center">
+            <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
+          </div>
+        </div>
       </footer>
       <script src="./Booststrap/js/bootstrap.bundle.min.js"></script>
   </body>
