--- a/Servicios.html
+++ b/Servicios.html
@@ -40,22 +40,31 @@
         <div class="col-12 col-lg-7 bg-opacity-25 bg-secondary  mt-lg-5" id="list-sings">
           <div class="row">
             <div class="col-6">
-              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Diagnostico, mantenimiento, reparación y calibración.</a></div>
-              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Sistemas de inyección diésel, motores, turbo alimentadores diésel.</a></div>
-              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Suministro de repuestos.</a></div>
-              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Scanner para diagnosticos de todas las marcas.</a></div>
-              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Mantenimiento preventivo.</a></div>
+              <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Diagnostico, mantenimiento, reparación y calibración.</a></div>
+              <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Sistemas de inyección diésel, motores, turbo alimentadores diésel.</a></div>
+              <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Suministro de repuestos.</a></div>
+              <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Scanner para diagnosticos de todas las marcas.</a></div>
+              <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Mantenimiento preventivo.</a></div>
             </div>
             <div class="col-6">
-              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Cambios de aceite, cambio sistemas de filtración, mantenimiento líneas de combustible.</a></div>
-              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Mantenimiento y revisión eléctrica.</a></div>
-              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Mantenimiento radiador e intercoler.</a></div>
-              <div class="row my-lg-4 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start"> Bombas de agua, recargas fanclutch.</a></div>
+              <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Cambios de aceite, cambio sistemas de filtración, mantenimiento líneas de combustible.</a></div>
+              <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Mantenimiento y revisión eléctrica.</a></div>
+              <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Mantenimiento radiador e intercoler.</a></div>
+              <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start"> Bombas de agua, recargas fanclutch.</a></div>
             </div>
           </div>
         </div>
         <div class="ms-lg-3 col-lg-4 col-12 mt-3 mt-lg-5"id="sing-information">
-          <div class="row"><p class="text-break">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, quibusdam! Rerum optio eum sit voluptatem aperiam, laudantium commodi. Reprehenderit error beatae vel quasi commodi maxime, repudiandae deserunt id? Minima, magnam!</p></div>
+          <div class="row">
+            <p class="text-break">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
+              quibusdam! Rerum optio eum sit voluptatem aperiam, laudantium commodi. 
+              Reprehenderit error beatae vel quasi commodi maxime, repudiandae deserunt id? Minima, magnam!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, adipisci quas repellat quisquam
+               cum esse sed unde ex dolores nobis. Illum modi molestias culpa impedit, quibusdam totam debitis cum non.
+            </p>
+          </div>
+          <div class="row m-auto" id="div-img-cambiante"><img  src="img\Img_extras\MOTOR5.jpeg" alt="" id="imagen-de-opciones"></div>
         </div>
       </div>
     </div>
