18/abril/2022 Fin de dia conn ->BD

--- a/Contactenos.html
+++ b/Contactenos.html
@@ -38,7 +38,7 @@
     <div id="contenido-contactenos" class="bg-image pb-0 justify-content-around" style="background-image: url('img/Bg/fondo_contactenos.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
       <div class="row ms-lg-5 ms-1 p-3 w-100">
         <div class="col-12 col-lg-4 ms-0 ms-lg-4 mt-lg-5 bg-secondary bg-opacity-25" id="div-form-contactenos">
-            <form id="formulario-pqrs" action="formu.php" method="POST">
+            <form id="formulario-pqrs" action="./php/INSERTS.php" method="POST">
               <div class="row my-lg-3 w-100 my-1">
                 <div class="col-6 mx-1 my-2">
                   <input class="bg-light bg-opacity-75" type="text" placeholder="Nombres y apellidos" name="nombre" required>
